2008-02-07  Jürg Billeter  <j@bitron.ch>

	* vala/valadelegate.vala, gobject/valaccodegenerator.vala,
	  tests/delegates.vala: create wrapper functions for methods used as
	  delegates to fix parameter order

2008-02-07  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, vala/valasignal.vala,
	  gobject/valaccodeassignmentbinding.vala,
	  gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorinvocationexpression.vala,
	  gobject/valaccodegeneratorsourcefile.vala,
	  tests/classes-properties.vala, vapi/glib-2.0.vapi: create wrapper
	  functions for signal handlers to support public signal handlers,
	  fixes bug 508834

2008-02-06  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valaarrayresizemethod.vala,
	  vala/valaattribute.vala, vala/valaattributeprocessor.vala,
	  vala/valacodecontext.vala, vala/valadelegate.vala,
	  vala/valaformalparameter.vala, vala/valainterfacewriter.vala,
	  vala/valamethod.vala, vala/valasemanticanalyzer.vala,
	  gobject/valaccodegeneratorinvocationexpression.vala,
	  gobject/valaccodegeneratormethod.vala:

	  Support flexible position of array length and delegate target
	  parameters, fixes bug 508831 and bug 513089

	* vapi/glib-2.0.vapi: update

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valapointertype.vala: implement get_symbols method,
	  based on patch by Andreas Brauchli, fixes bug 514008

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valaclass.vala, vala/valaproperty.vala,
	  gobject/valaccodegeneratorinterface.vala: support default values
	  for properties, fixes bug 437434

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala, gobject/valaccodegeneratorsignal.vala:
	  support non-simple struct as signal parameter type

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix critical when using interface
	  properties

2008-02-05  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valaexpression.vala,